<?xml version="1.0" encoding="utf-8"?>
<com.github.johnnysc.jokeapp.presentation.CorrectTextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/commonDataTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:gravity="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    tools:text="No favorite items" />