<resources>
    <string name="app_name">Jokes &amp; Quotes</string>
    <string name="get_joke">Get joke</string>
    <string name="get_quote">Get quote</string>
    <string name="show_favorite_joke">Show favorite joke</string>
    <string name="show_favorite_quote">Show favorite quote</string>
    <string name="no_connection">No internet connection</string>
    <string name="service_unavailable">Service is unavailable</string>
    <string name="no_cached_data">No favorites! Add one by heart icon</string>
    <string name="generic_fail_message">Something went wrong</string>
    <string name="remove_from_favorites">Remove from favorites?</string>
    <string name="yes">yes</string>
    <string name="jokes">Jokes</string>
    <string name="quotes">Quotes</string>
</resources>