...
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding"
            tools:text="Joke or error message" />

        <com.github.johnnysc.jokeapp.presentation.CorrectImageButton
            android:id="@+id/changeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?selectableItemBackground"
            tools:src="@android:drawable/ic_input_add" />
    </LinearLayout>
...
